<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <artifactId>auth-box-web</artifactId>
    <version>0.1.24</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <webjars.locator.version>0.42</webjars.locator.version>
        <webjars.bootstrap.version>4.6.0</webjars.bootstrap.version>
        <webjars.jquery.version>3.6.4</webjars.jquery.version>
        <webjars.font-awesome.version>5.15.4</webjars.font-awesome.version>
        <webjars.angularjs.version>1.8.2</webjars.angularjs.version>
        <webjars.angular-ui-bootstrap.version>2.5.0</webjars.angular-ui-bootstrap.version>
        <webjars.angular-toastr.version>2.1.1</webjars.angular-toastr.version>
        <webjars.bootstrap4-toggle.version>3.6.1</webjars.bootstrap4-toggle.version>
        <webjars.select2.version>4.0.13</webjars.select2.version>
        <webjars.momentjs.version>2.29.4</webjars.momentjs.version>
        <webjars.angular-moment.version>1.0.0</webjars.angular-moment.version>
        <webjars.popper.version>1.14.7</webjars.popper.version>
        <webjars.jquery-cookie.version>1.4.1-1</webjars.jquery-cookie.version>
    </properties>

    <parent>
        <groupId>com.authbox</groupId>
        <artifactId>auth-box</artifactId>
        <version>0.1.24</version>
    </parent>

    <dependencies>
        <dependency>
            <groupId>com.authbox</groupId>
            <artifactId>auth-box-base</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.nimbusds</groupId>
            <artifactId>oauth2-oidc-sdk</artifactId>
            <version>[9.2.2,)</version>
        </dependency>

        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
        </dependency>

        <!-- webjars -->
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>webjars-locator</artifactId>
            <version>${webjars.locator.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>bootstrap</artifactId>
            <version>${webjars.bootstrap.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>jquery</artifactId>
            <version>${webjars.jquery.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>font-awesome</artifactId>
            <version>${webjars.font-awesome.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>angularjs</artifactId>
            <version>${webjars.angularjs.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>angular-ui-bootstrap</artifactId>
            <version>${webjars.angular-ui-bootstrap.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>angular-toastr</artifactId>
            <version>${webjars.angular-toastr.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars.npm</groupId>
            <artifactId>bootstrap4-toggle</artifactId>
            <version>${webjars.bootstrap4-toggle.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>select2</artifactId>
            <version>${webjars.select2.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>momentjs</artifactId>
            <version>${webjars.momentjs.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>angular-moment</artifactId>
            <version>${webjars.angular-moment.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>popper.js</artifactId>
            <version>${webjars.popper.version}</version>
        </dependency>
        <dependency>
            <groupId>org.webjars</groupId>
            <artifactId>jquery-cookie</artifactId>
            <version>${webjars.jquery-cookie.version}</version>
        </dependency>


    </dependencies>

    <build>
        <finalName>auth-box-web</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>4.9.10</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <verbose>false</verbose>
                    <dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
                    <dateFormat>MM-dd-yyyy '@' HH:mm:ss Z</dateFormat>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
                    <failOnNoGitDirectory>true</failOnNoGitDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
